--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@
     --off-white: #f1f1f1;
     --dark-gray: #49565c;
 }
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 
 body {
     font-family: 'Fira Sans', sans-serif;
-    margin: 0px
 }
 
 hr {
@@ -23,7 +28,7 @@ hr {
 
 /** container **/
 .container {
-    padding: 0.5rem 1rem;
+    padding: 0rem 1rem;
 }
 
 .container-center {
@@ -33,17 +38,17 @@ hr {
 
 /** links **/
 .link {
-    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    /* margin-top: 5rem;
-    margin-bottom: 1rem; */
+    max-width: 125px;
 }
 
 .link-primary {
+    display: block;
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white
+    color: white;
+    margin-top: 1.2rem;
 }
 
 .link-secondary {
@@ -51,8 +56,6 @@ hr {
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
 }
-
-/** look into BEM naming convention for CSS **/
 
 /** lists **/
 
@@ -122,10 +125,13 @@ hr {
 
 .section h1 {
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .ow {
     background-color: var(--off-white);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 /** footers **/
