change secondary link style

--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@ hr {
 }
 
 .link-secondary {
+    display: block;
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+    margin-top: 1.2rem;
 }
 
 /** lists **/
@@ -151,6 +153,7 @@ hr {
 .footer .footer-header {
     font-weight: bold;
     font-size: large;
+    margin: 1rem 0rem;
 }
 
 .footer ul {
