--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ hr {
     max-width: 600px;
     margin: auto;
 }
-
+.card{
+    border-radius: 1rem;
+    box-shadow: 2px 2px 8px grey;
+}
 /** links **/
 .link {
     text-decoration: none;
@@ -58,7 +61,9 @@ hr {
     border: 1px solid var(--primary-color);
     margin-top: 1.2rem;
 }
-
+.link-inline{
+    display: inline-block;
+}
 /** lists **/
 
 .list-non-bullet {
